Enunciado de 2019/1/MAT1203/6

--- a/2019/1/MAT1203/6/enunciado.tex
+++ b/2019/1/MAT1203/6/enunciado.tex
@@ -115,6 +115,10 @@
 	2 & -5 & -4 & 1 & 8 \\
 	-6 & 0 & 7 & -3 & 1
 	\end{bmatrix}$$
+\item Sea $A = \begin{bmatrix}
+	1 & 2 & 3\\
+	2 & 8 & 4 \\
+	3 & 4 & 11\end{bmatrix}$. Calcule la factorización $A=LDL^T$ de la matriz $A$ y en base a esto encuentre una matriz $R$ tal que $A = RR^T$.
 \item Sea una descomposción $PA = LU$ donde
 	$$P = \begin{bmatrix}
 	0 & 0 & 1\\
