Enunciado de 2019/1/MAT1203/6

--- a/2019/1/MAT1203/6/enunciado.tex
+++ b/2019/1/MAT1203/6/enunciado.tex
@@ -143,5 +143,15 @@
 	1 \quad si\ i > j
 	\end{cases}$$
 	Calcule $det(A)$.
+\item Sean $v_1,v_2,v_3,v_4 \in \R^4$, encuentre el $|A|$ si\\
+$A=[v_1-v_3+v_4 \;\;\;\;-v_2-v_3 \;\;\;\; v_3-v_1
+\;\;\;\;v_1+v_2+2v_4 ]\in M_4 (\R)$
+\item Sea $A \in M_4 (\R)$ tal que $|A|=5$, encuentre
+\begin{tasks}(4)
+\task $|2^3A|$
+\task $|A^5|$
+\task $|-A|$
+\task $||A|A^{-1}|$
+\end{tasks}
 \end{preguntas}
 \end{document}
