Solución de 2019/1/MAT1203/6

--- a/2019/1/MAT1203/6/solucion.tex
+++ b/2019/1/MAT1203/6/solucion.tex
@@ -369,5 +369,27 @@ En primer lugar, veamos como es $A$,
 		Notemos ahora que la diagonal está compuesta de un 1 y luego puros 2, por lo que
 		$$det(A) = 3 \cdot 2^{n-1}$$
 \end{solucion}
+\item Sean $v_1,v_2,v_3,v_4 \in \R^4$, encuentre el $|A|$ si\\
+$A=[v_1-v_3+v_4 \;\;\;\;-v_2-v_3 \;\;\;\; v_3-v_1
+\;\;\;\;v_1+v_2+2v_4 ]\in M_4 (\R)$
+\begin{solucion}
+
+\end{solucion}
+\item Sea $A \in M_4 (\R)$ tal que $|A|=5$, encuentre
+\begin{tasks}(4)
+\task $|2^3A|$
+\task $|A^5|$
+\task $|-A|$
+\task $||A|A^{-1}|$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
