Solución de 2019/1/MAT1610/7

--- a/2019/1/MAT1610/7/solucion.tex
+++ b/2019/1/MAT1610/7/solucion.tex
@@ -108,5 +108,11 @@
 \end{center}
 
 \begin{preguntas}
+\item Grafique la curva
+$$y = 4\arctan x - \dfrac{x^3}{3} - x$$
+indicando su dominio, asíntotas horizontales y verticales, intervalos de crecimiento y decrecimiento, máximos y mínimos, sentido de la concavidad y puntos de inflexión.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
