Enunciado de 2019/1/MAT1610/7

--- a/2019/1/MAT1610/7/enunciado.tex
+++ b/2019/1/MAT1610/7/enunciado.tex
@@ -116,5 +116,14 @@ indicando su dominio, asíntotas horizontales y verticales, intervalos de crecim
 \item Determine, en caso que existan, las asíntotas verticales y horizontales del gráfico de $f$.
 \item Determine los intervalos de crecimiento, decrecimiento, así como la concavidad de $f$.
 \end{enumerate}
+\item Trace la gráfica de
+$$f(x) =\begin{cases} 
+\dfrac{x+2}{x-2} & x > 0\\\\
+\dfrac{x-1}{x^2+1} & x \leq 0 
+\end{cases}$$
+indicando dominio, intervalos de crecimiento y decrecimiento, extremos locales, concavidad, puntos de inflexión y asíntotas.
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
 \end{preguntas}
 \end{document}
