Solución de 2019/1/MAT1610/7

--- a/2019/1/MAT1610/7/solucion.tex
+++ b/2019/1/MAT1610/7/solucion.tex
@@ -126,5 +126,20 @@ indicando su dominio, asíntotas horizontales y verticales, intervalos de crecim
 \item 
 \end{enumerate}
 \end{solucion}
+\item Trace la gráfica de
+$$f(x) =\begin{cases} 
+\dfrac{x+2}{x-2} & x > 0\\\\
+\dfrac{x-1}{x^2+1} & x \leq 0 
+\end{cases}$$
+indicando dominio, intervalos de crecimiento y decrecimiento, extremos locales, concavidad, puntos de inflexión y asíntotas.
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
