--- a/2019/1/MAT1610/7/solucion.tex
+++ b/2019/1/MAT1610/7/solucion.tex
@@ -51,7 +51,7 @@
 }
 
 \newcommand{\ayudantia}{{\sc Ayudantía 7}}
-\newcommand{\tituloayu}{Gráficos de funciones}
+\newcommand{\tituloayu}{l'Hôpital y trazo de curvas}
 \newcommand{\fecha}{20 de abril de 2019}
 \newcommand{\sigla}{MAT1610}
 \newcommand{\nombre}{Cálculo I}
