Solución de 2019/1/MAT1610/7

--- a/2019/1/MAT1610/7/solucion.tex
+++ b/2019/1/MAT1610/7/solucion.tex
@@ -108,6 +108,20 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine los siguientes límites, en caso de que existan
+\begin{tasks}(3)
+\task $\lim\limits_{x\ra 0}\dfrac{(\arcsin x)^2}{1-cos(3x)}$
+\task $\lim\limits_{x\ra 0} x^{\frac{1}{\ln (e^x-1)}}$
+\task $\lim\limits_{x\ra \infty} \left(1+\dfrac{a}{x}\right)^{bx}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
 \item Considere la función $f(x) = x + 1 - \dfrac{2}{x} - 3\dfrac{ln(x)}{x}$ definida en $(0, \infty)$.
 \begin{enumerate}[a)]
 \item Determine, en caso que existan, las asíntotas verticales y horizontales del gráfico de $f$.
