--- a/2019/1/MAT1610/7/enunciado.tex
+++ b/2019/1/MAT1610/7/enunciado.tex
@@ -117,7 +117,7 @@
 \item Considere la función $f(x) = x + 1 - \dfrac{2}{x} - 3\dfrac{ln(x)}{x}$ definida en $(0, \infty)$.
 \begin{enumerate}[a)]
 \item Determine, en caso que existan, las asíntotas verticales y horizontales del gráfico de $f$.
-\item Determine los intervalos de crecimiento, decrecimiento, así como la concavidad de $f$.
+\item Determine los intervalos de crecimiento, decrecimiento y la concavidad de $f$.
 \end{enumerate}
 \item Grafique la curva
 $$y = 4\arctan x - \dfrac{x^3}{3} - x$$
