Enunciado de 2019/1/MAT1610/7

--- a/2019/1/MAT1610/7/enunciado.tex
+++ b/2019/1/MAT1610/7/enunciado.tex
@@ -116,7 +116,7 @@
 \end{tasks}
 \item Considere la función $f(x) = x + 1 - \dfrac{2}{x} - 3\dfrac{ln(x)}{x}$ definida en $(0, \infty)$.
 \begin{enumerate}[a)]
-\item Determine, en caso que existan, las asíntotas verticales y horizontales del gráfico de $f$.
+\item Determine, en caso que existan, las asíntotas verticales y horizontales de $f$.
 \item Determine los intervalos de crecimiento, decrecimiento y la concavidad de $f$.
 \end{enumerate}
 \item Grafique la curva
