Enunciado de 2019/1/MAT1203/7

--- a/2019/1/MAT1203/7/enunciado.tex
+++ b/2019/1/MAT1203/7/enunciado.tex
@@ -113,5 +113,8 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
+	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
+	Demuestre que $U$ es subespacio de $V$.
 \end{preguntas}
 \end{document}
