--- a/2018/1/MAT1203/8/solucion.tex
+++ b/2018/1/MAT1203/8/solucion.tex
@@ -178,6 +178,58 @@
 			$$V(T(P)) = |det(A_P)| \cdot |det(A_T)| = 15 \cdot 0 = 0$$
 \end{enumerate}
 \end{solucion}
+\item Calcular el determinante de siguiente matriz de $n\times n$
+	$$ \begin{bmatrix}
+	-3 & x & x & \dots & x \\
+	x & -3 & x & \dots & x \\
+	x & x & -3 & \dots & x \\
+	\vdots & \vdots & \vdots & \ddots & \vdots \\
+	x & x & x & \dots & -3
+	\end{bmatrix}$$
+\begin{solucion}
+Calulemos el determinante de la matriz, esto es
+		$$ \left|\begin{bmatrix}
+		-3 & x & x & \dots & x \\
+		x & -3 & x & \dots & x \\
+		x & x & -3 & \dots & x \\
+		\vdots & \vdots & \vdots & \ddots & \vdots \\
+		x & x & x & \dots & -3
+		\end{bmatrix}\right|$$
+		Lo primero que haremos, será restarle la fila $n$ a todas las filas menos a la fila 1 y a la fila $n$, es decir realizaremos las operaciones $f_2-f_n$, $f_3-f_n$, \dots, $f_{n-1} - f_n$
+		$$ \left|\begin{bmatrix}
+		-3 & x & x & \dots & x \\
+		0 & -3-x & 0 & \dots & x+3 \\
+		0 & 0 & -3 & \dots & x+3 \\
+		\vdots & \vdots & \vdots & \ddots & \vdots \\
+		x & x & x & \dots & -3
+		\end{bmatrix}\right|$$
+		En segundo lugar, haremos $f_n-f_1$
+		$$ \left|\begin{bmatrix}
+		-3 & x & x & \dots & x \\
+		0 & -3-x & 0 & \dots & x+3 \\
+		0 & 0 & -3 & \dots & x+3 \\
+		\vdots & \vdots & \vdots & \ddots & \vdots \\
+		x+3 & 0 & 0 & \dots & -3-x
+		\end{bmatrix}\right|$$
+		Recordemos que el determinante de una matriz es el mismo que de su transpuesta, por lo que podemos también realizar operaciones de columnas al igual como lo hacemos con las filas. Dicho esto, haremos $c_1 + c_n$,
+		$$ \left|\begin{bmatrix}
+		-3+x & x & x & \dots & x \\
+		x+3 & -3-x & 0 & \dots & x+3 \\
+		x+3 & 0 & -3 & \dots & x+3 \\
+		\vdots & \vdots & \vdots & \ddots & \vdots \\
+		0 & 0 & 0 & \dots & -3-x
+		\end{bmatrix}\right|$$
+		Por último, realizaremos las operaciones $c_1 + c_2$, $c_1 +c_3$, \dots, $c_1 + c_{n-1}$
+		$$ \left|\begin{bmatrix}
+		-3+x(n-1) & x & x & \dots & x \\
+		0 & -3-x & 0 & \dots & x+3 \\
+		0 & 0 & -3 & \dots & x+3 \\
+		\vdots & \vdots & \vdots & \ddots & \vdots \\
+		0 & 0 & 0 & \dots & -3-x
+		\end{bmatrix}\right|$$
+		Aqui ya podemos multiplicar la diagonal de esta matriz, con lo que el determinante nos queda
+		$$det = (-3 + x(n-1)) \cdot (-3-x)^{n-1} = (-3-x)^n + xn(-3-x)^{n-1}$$
+\end{solucion}
 \item Sea $A = \begin{bmatrix}
 	1 & 2 & 3\\
 	2 & 8 & 4 \\
@@ -262,6 +314,55 @@ Procedemos a pivotear la matriz para llevarla a su forma escalonada, preocupando
 		0 & 2 & -1\\
 		0 & 0 & 1
 		\end{bmatrix}$$
+\end{solucion}
+\item En cada caso, determine si la afirmación es verdadera o falsa y justifique su respuesta.
+\begin{enumerate}[a)]
+\item El subconjunto de $\R^2$
+		$$E=\{(x_1, x_2) \in \R^2:9x_1^2+2x_2^2 \leq 4\}$$
+		es un subespacio vectorial de $\R^2$.
+\item Si $A$ es una matriz de $n \times n$ tal que $A^2=A$, entonces $Col(A) \cap Nul(A) = \{0\}$.
+\item Si $n$ es impar y $A$ es una matriz de $n\times n$ que satisface $A^T = -A$ entonces $Nul(A) \neq \{0\}$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item El subconjunto de $\R^2$
+			$$E=\{(x_1, x_2) \in \R^2:9x_1^2+2x_2^2 \leq 4\}$$
+			es un subespacio vectorial de $\R^2$.\\
+			\\
+			Tomemos el par $(0,1)$
+			$$9 \cdot 0^2 + 2 \cdot 1^2 \leq 4 \ra 2 \leq 4 \ra (0,1) \in E$$
+			Veamos ahora con $2 \cdot (0,1) = (0,2)$,
+			$$9 \cdot 0^2 + 2 \cdot 2^2 \leq 4 \ra 8 \leq 4 \ra (0,2) \not \in E$$
+			Con lo que concluimos que $E$ no es cerrado en la multiplicación, por lo que no puede ser un subespacio vectorial. Entonces, la afirmación es {\bf FALSA}.
+\item Si $A$ es una matriz de $n \times n$ tal que $A^2=A$, entonces $Col(A) \cap Nul(A) = \{0\}$.\\
+			\\
+			Digamos que $y \in Col(A) \cap Nul(A)$
+			
+			Como $y \in Col(A) \cap Nul(A) \ra \exists x \in \R^n (Ax = y)$\\
+			\\
+			Como $A^2 = A$, entonces
+			$$Ay = A(Ax) = A^2x = Ax = y$$
+			de donde concluimos que $y = Ay$\\
+			\\
+			Además, sabemos que $y \in Nul(A)$, por lo que
+			$$y = Ay = 0 \ra y = 0$$
+			Luego,
+			$$Col(A) \cap Nul(A) = \{0\}$$
+			Por lo que la afirmación es {\bf VERDADERA}.
+\item Si $n$ es impar y $A$ es una matriz de $n\times n$ que satisface $A^T = -A$ entonces $Nul(A) \neq \{0\}$.\\
+			\\
+			$$det(-A) = (-1)^n det(A)$$
+			Pero $n$ es impar, por lo que
+			$$det(-A) = -det(A)$$
+			Además, $det(A) = det(A^T)$. Luego,
+			$$det(A) = det(A^T) = det(-A) = -det(A)$$
+			$$det(A) = -det(A)$$
+			$$det(A) = 0$$
+			Luego, $A$ no es invertible, por lo que
+			$$Nul(A) \neq \{0\}$$
+			Dicho esto, la afirmación es {\bf VERDADERA}.
+\end{enumerate}
 \end{solucion}
 \end{preguntas}
 \end{document}
