--- a/2019/1/MAT1203/7/solucion.tex
+++ b/2019/1/MAT1203/7/solucion.tex
@@ -113,6 +113,100 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $A$ una matriz de $4\times 4$, tal que $det(A) = \alpha \neq 0$
+\begin{enumerate}[a)]
+\item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
+\item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Calcule  $det(5A)+det(3A^{-1})$ en terminos de $\alpha$.
+			
+			En primer lugar,
+			$$det(5A) = 5^4det(a) = 5^4\alpha = 625 \alpha$$
+			En segundo lugar,
+			$$det(3A^{-1}) = 3^4det(A^{-1}) = 3^4 \dfrac{1}{\alpha} = \dfrac{81}{\alpha}$$
+			Finalmente,
+			$$det(5A)+det(3A^{-1}) = 625 \alpha + \dfrac{81}{\alpha}$$
+\item Se sabe que $det(Adj(A))=8$. Calcule $\alpha$.
+			
+			Recordemos que
+			$$A\ Adj(A) = det(A) I$$
+			Apliquemos $det$ a ambos lados de la igualdad,
+			$$det(A\ Adj(A)) = det(det(A) I)$$
+			$$det(A)\ det(Adj(A)) = det(A)^4\ det(I)$$
+			$$det(Adj(A)) = det(A)^3$$
+			$$det(A) = \sqrt[3]{det(Adj(A))}$$
+			$$det(A) = \sqrt[3]{8}$$
+			$$det(A) = 2$$
+\end{enumerate}
+\end{solucion}
+\item Sea $P$ el paralelepípedo con un vertice en el origen y vertices adyacentes en $(1,4,0)$, $(-2,-5,2)$, $(-1,2,-1)$
+\begin{enumerate}[a)]
+\item Determinar el volumen de $P$.
+\item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+zx-z)$$
+		Calcule el volumen de $T(P)$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Determinar el volumen de $P$.\\
+			\\
+			Los vectores de las aristas son 
+			$$v_1 = \begin{pmatrix}
+			1 \\ 4 \\ 0
+			\end{pmatrix}, \quad
+			v_2 = \begin{pmatrix}
+			-2 \\ -5 \\ 2
+			\end{pmatrix}, \quad
+			v_3 = \begin{pmatrix}
+			-1 \\ 2 \\ -1
+			\end{pmatrix}$$
+			Podemos representar a $P$ en forma matricial de la siguiente forma:
+			$$A_P = \begin{bmatrix}
+			1 & -2 & -1 \\
+			4 & -5 & 2 \\
+			0 & 2 & -1
+			\end{bmatrix}$$
+			Luego, el volumen de $P$ se calcula como $|det(A_P)|$, esto es
+			$$\left| det \left(\begin{bmatrix}
+			1 & -2 & -1 \\
+			4 & -5 & 2 \\
+			0 & 2 & -1
+			\end{bmatrix}\right)\right| =| 0 -2(2+4) - 1(-5+8)| = |-12 - 3| =| -15| = 15$$
+			Por lo que el volumen de $P$ es $15$.
+\item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+z,x-z)$$
+			Calcule el volumen de $T(P)$.\\
+			\\
+			En primer lugar, encontremos la matriz de la transformación lineal
+			$$T(x,y,z)=(x+y,y+z,x-z) = \begin{pmatrix}
+			x+y \\ 
+			y+z \\ 
+			x-z
+			\end{pmatrix} = \begin{bmatrix}
+			1 & 1 & 0 \\
+			0 & 1 & 1 \\
+			1 & 0 & -1 
+			\end{bmatrix} \begin{pmatrix}
+			x \\ y \\ z
+			\end{pmatrix}$$
+			Por lo que
+			$$A_T = \begin{bmatrix}
+			1 & 1 & 0 \\
+			0 & 1 & 1 \\
+			1 & 0 & -1 
+			\end{bmatrix}$$
+			Luego, el volumen de $T(P)$ será $|det(A_P)| \cdot |det(A_T)|$
+			$$|det(A_T)| = \left| det \left(\begin{bmatrix}
+			1 & 1 & 0 \\
+			0 & 1 & 1 \\
+			1 & 0 & -1 
+			\end{bmatrix}\right)\right| = |1(-1-0) - (0 - 1)| = |1-1| = 0$$
+			Finalmente,
+			$$V(T(P)) = |det(A_P)| \cdot |det(A_T)| = 15 \cdot 0 = 0$$
+\end{enumerate}
+\end{solucion}
 \item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
 	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
 	Demuestre que $U$ es subespacio de $V$.
