Enunciado de 2019/1/MAT1203/7

--- a/2019/1/MAT1203/7/enunciado.tex
+++ b/2019/1/MAT1203/7/enunciado.tex
@@ -124,6 +124,7 @@
 \item Se define $T: \R^3 \ra \R^3$ como la transformación lineal definida por $$T(x,y,z)=(x+y,y+zx-z)$$
 		Calcule el volumen de $T(P)$.
 \end{enumerate}
+\item Determine la segunda columna de la inversa de $A = \left[ \begin{array}{rrr} 2&1&0\\ 0&1&2\\ 1&2&0 \end{array} \right]$ utilizando el metodo de cramer.
 \item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
 	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
 	Demuestre que $U$ es subespacio de $V$.
