Solución de 2019/1/MAT1203/7

--- a/2019/1/MAT1203/7/solucion.tex
+++ b/2019/1/MAT1203/7/solucion.tex
@@ -207,6 +207,10 @@
 			$$V(T(P)) = |det(A_P)| \cdot |det(A_T)| = 15 \cdot 0 = 0$$
 \end{enumerate}
 \end{solucion}
+\item Determine la segunda columna de la inversa de $A = \left[ \begin{array}{rrr} 2&1&0\\ 0&1&2\\ 1&2&0 \end{array} \right]$ utilizando el metodo de cramer.
+\begin{solucion}
+
+\end{solucion}
 \item Sea $V = \mathbb{P}_2$ el espacio vectorial de los polinomios con coeficientes reales de grado menor o igual a 2. Demuestre que el conjunto
 	$$U=\{p(x) \in V : p(1) + p(0) = p(-1)\}$$
 	Demuestre que $U$ es subespacio de $V$.
